# regkit

./: CMakeLists.txt  README.md
assets/: associate_regkit_reg.bat  remove_regkit_reg.bat
include/app/: app_window.h  command_ids.h  favorites_store.h  font_dialog.h  registry_io.h  registry_security.h  registry_tree.h  replace_dialog.h  search_dialog.h  theme.h  theme_presets.h  toolbar.h  trace_dialog.h  ui_helpers.h  value_dialogs.h  value_list.h
include/registry/: registry_provider.h  search_engine.h
include/win32/: icon_resources.h  win32_helpers.h
installer/: build_installer.bat  regkit.iss
resources/: app.manifest  app.rc  dialogs.rc  resource.h
src/: app_entry.cpp
src/app/: app_window.cpp  app_window_commands.cpp  favorites_store.cpp  font_dialog.cpp  registry_io.cpp  registry_security.cpp  registry_tree.cpp  replace_dialog.cpp  search_dialog.cpp  theme.cpp  theme_presets.cpp  theme_presets_dialog.cpp  toolbar.cpp  trace_dialog.cpp  ui_helpers.cpp  value_dialogs.cpp  value_list.cpp
src/registry/: registry_provider.cpp  search_engine.cpp
src/win32/: icon_resources.cpp  win32_helpers.cpp
